# playground

./: .gitignore  README.md
.github/workflows/: codeql.yml  golang-build.yml  gradle.yml  kotlin-build.yml  ktor-build.yml  python-build.yml
.run/: KotlinApplication.run.xml  KtorApplicationKt.run.xml
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/playground/kotlin/: KotlinApplication.kt
kotlin/src/main/resources/: application.yml
kotlin/src/test/kotlin/com/playground/kotlin/: KotlinApplicationTests.kt
ktor/: build.gradle.kts  gradle.properties
ktor/src/main/kotlin/com/playground/: Application.kt  KtorApplication.kt
ktor/src/main/kotlin/com/playground/plugins/: Routing.kt
ktor/src/main/resources/: application.yaml
ktor/src/test/kotlin/com/playground/: ApplicationTest.kt
node/: package-lock.json  package.json  tsconfig.json
node/src/: index.ts
py/: pyproject.toml
python/: aws_sigv4.py
