[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["Utkarsh Srivastava <usrivastava92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.4"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
