[tool.poetry]
name = "py"
version = "0.1.0"
description = ""
authors = ["Utkarsh Srivastava <usrivastava92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.15.0"
pytest = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
